[project]
name = "causal-inference-in-python-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "cycler>=0.11.0",
    "graphviz>=0.20.1",
    "matplotlib>=3.5.3",
    "numpy>=1.21.6",
    "pandas>=1.1.5",
    "seaborn>=0.12.2",
    "statsmodels>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.16.2",
]
